--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,10 +25,10 @@
         <!-- About -->
         <!-- <a class="page-link" href="{{ site.baseurl | prepend: site.url }}/">about</a> -->
         <a class="page-link" href="#about">about</a>
-        <a class="page-link" href="{{ 'https://ghliu.github.io/assets/pub/CV-two-page-2019.pdf' }} " target="\_blank">vitae</a>
+        <a class="page-link" href="{{ 'https://wwmore.github.io/hwang/assets/pub/CV-two-page-2019.pdf' }} " target="\_blank">vitae</a>
         <!-- <a class="page-link" href="#news">news</a> -->
         <a class="page-link" href="#publications">publications</a>
-        <a class="page-link" href="#projects">projects</a>
+        <!-- <a class="page-link" href="#projects">projects</a> -->
         <!-- <a class="page-link" href="{{ site.baseurl | prepend: site.url }}/">projects</a> -->
 
         <!-- ===================================== -->
