--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,10 +27,10 @@ layout: default
     {% include papers.html %}
   {% endif %}
 
-  <div id='projects'><a name='projects'></a></div>
+  <!--<div id='projects'><a name='projects'></a></div>
   {% if page.projects %}
     {% include projects.html %}
-  {% endif %}
+  {% endif %}-->
 
   {% if page.social %}
     {% include social.html %}
