--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
         <a class="page-link" href="#about">about</a>
         <a class="page-link" href="#publications">publications</a>
         <a class="page-link" href="#news">news</a> 
-        <a class="page-link" href="{{ 'https://wwmore.github.io/hwang/assets/pub/CV-two-page-2019.pdf' }} " target="\_blank">vitae</a>
+        <!-- <a class="page-link" href="{{ 'https://wwmore.github.io/hwang/assets/pub/CV-two-page-2019.pdf' }} " target="\_blank"> CV vitae</a> -->
 
         <!-- <a class="page-link" href="#projects">projects</a> -->
         <!-- <a class="page-link" href="{{ site.baseurl | prepend: site.url }}/">projects</a> -->
