--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -75,7 +75,7 @@
 
         .image { 
             width: 30%; 
-            img { height: 100%; }
+            img { width: 70%; }
         }
         .empty { width: 2%; }
         .description { 
