--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="post">
-  <div id='about'><a name='about'></a></div>  
+  <div id='about'><a name='about'></a></div>
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <h5 class="post-description">{{ page.description }}
@@ -13,15 +13,15 @@ layout: default
     {{ content }}
   </article>
 
-  {% if page.research_interest %}
+  <!--{% if page.research_interest %}
     {% include research_interest.html %}
-  {% endif %}
+  {% endif %}-->
 
   <div id='news'><a name='news'></a></div>
   {% if page.news %}
     {% include news.html %}
   {% endif %}
-  
+
   <div id='publications'><a name='publications'></a></div>
   {% if page.papers %}
     {% include papers.html %}
