--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,9 +13,9 @@ layout: default
     {{ content }}
   </article>
 
-  <!--{% if page.research_interest %}
+  {% if page.research_interest %}
     {% include research_interest.html %}
-  {% endif %}-->
+  {% endif %}
 
   <div id='news'><a name='news'></a></div>
   {% if page.news %}
