--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -2,7 +2,8 @@
     img {
         box-shadow: 0 0 5px $grey-color;
         width: 50%;
-        margin-left: 20px;
+        margin-left: 50px;
+        p { margin: 10; }
     }
 }
 .address {
