--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -1,8 +1,8 @@
 .profile {
     img {
         box-shadow: 0 0 5px $grey-color;
-        width: 10%;
-        margin-left: 10px;
+        width: 50%;
+        margin-left: 50px;
     }
 }
 .address {
@@ -152,7 +152,7 @@
 }
 
 .me {
-    color: #00369f;
+    color: rgba(#000,.0625);
     font-weight: bold;
 }
 
